--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 	<div layout="column" layout-fill>
 		<md-toolbar md-scroll-shrink md-shrink-speed-factor="0.5" layout="row" layout-align="start center">
 			<md-button class="" aria-label="home" ui-sref="home">
-				<span> Home </span>
+				<span> Home Test 5</span>
 			</md-button>
 			<md-button class="" aria-label="downloads" ui-sref="downloads">
 				<span> Downloads </span>
