--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
 	<link rel="stylesheet" href="vendor/angular-material/angular-material.min.css">
 	<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="vendor/font-awesome//css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/font-awesome.css">
 	<style>
 		html { overflow-y:scroll; }
 	</style>
